<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="285dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background_white"
    android:padding="@dimen/margin_20dp"
    android:orientation="vertical"
    tools:context=".ApplicationActivities.LauncherActivity">

    <ImageView
        android:layout_width="@dimen/margin_40dp"
        android:src="@drawable/splash_main_icon"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/margin_40dp" />
    <com.socialinfotech.feeedj.AppUtils.TextViewPlus
        app:customFont="@string/Boldfont"
        android:layout_width="match_parent"
        android:text="@string/waring"
        android:layout_marginTop="@dimen/margin_20dp"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <com.socialinfotech.feeedj.AppUtils.TextViewPlus
        android:id="@+id/warnig_two"
        app:customFont="@string/Boldfont"
        android:layout_width="match_parent"
        android:text="@string/warnig_two"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_14sp"
            android:text="@string/Skip"
            android:layout_marginRight="@dimen/margin_10dp"
            android:background="@drawable/btn_background_grey"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/btn_cnl"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/txt_14sp"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:background="@drawable/btn_background_pink"
            android:layout_height="30dp" />
    </LinearLayout>
</LinearLayout>
