<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ApplicationActivities.LauncherActivity">



    <ImageView
        android:layout_width="match_parent"
        android:text="@string/provide_Text"
        android:background="@drawable/saudimade"
        android:id="@+id/sadads"
        android:layout_height="349dp" />
    <com.socialinfotech.feeedj.AppUtils.TextViewPlus
        app:customFont="@string/Boldfont"
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:background="@drawable/bottom_corner_round"
        android:text="@string/saudi"
        android:padding="@dimen/margin_10dp"
        android:layout_below="@+id/sadads"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_height="wrap_content" />

</RelativeLayout>
