<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="match_parent"
            android:text="@string/Second_tab_title"
            android:gravity="center"
            android:textSize="@dimen/txt_18sp"
            android:textColor="@color/white"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <com.jude.easyrecyclerview.EasyRecyclerView
        android:id="@+id/list"
        android:name="com.socialinfotech.feeedj.FollowingActivities.FollowingFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        app:layoutManager="LinearLayoutManager"
        app:layout_progress="@layout/view_progrss"
        tools:context=".FollowingActivities.FollowingFragment"
        tools:listitem="@layout/fragment_item" />

    <ImageView
        android:id="@+id/img_empty"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/no_subscribe"
        android:padding="@dimen/margin_100dp"
        android:layout_height="match_parent" />


    <com.socialinfotech.feeedj.AppUtils.TextViewPlus
        app:customFont="@string/Boldfont"
        android:id="@+id/txt_hint"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/trans_black"
        android:text="@string/pullRefresh"
        android:textSize="@dimen/txt_14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_height="@dimen/margin_40dp" />
</RelativeLayout>