<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/list_bg"
    android:orientation="vertical"
    tools:context="com.socialinfotech.feeedj.SettingActivities.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="match_parent"
            android:text="@string/Changpassword"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18sp"
            android:gravity="center"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/back"
            android:layout_alignParentLeft="true"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_centerVertical="true"
            android:id="@+id/btn_setting"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_20dp"
        android:layout_height="match_parent">

        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="match_parent"
            android:textSize="@dimen/txt_18sp"
            android:text="@string/Old_passwod"
            android:gravity="right"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_old"
            android:layout_width="match_parent"
            android:background="@drawable/et_background_white"
            android:gravity="right"
            android:padding="@dimen/margin_10dp"
            android:singleLine="true"
            android:inputType="textVisiblePassword"
            android:layout_marginTop="@dimen/margin_20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="match_parent"
            android:textSize="@dimen/txt_18sp"
            android:text="@string/new_password"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="right"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_new_pass"
            android:layout_width="match_parent"
            android:background="@drawable/et_background_white"
            android:gravity="right"
            android:padding="@dimen/margin_10dp"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:layout_marginTop="@dimen/margin_20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:textSize="@dimen/txt_18sp"
            android:text="@string/cnf_pwd"
            android:gravity="right"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_cnf_pass"
            android:layout_width="match_parent"
            android:background="@drawable/et_background_white"
            android:gravity="right"
            android:padding="@dimen/margin_10dp"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:layout_marginTop="@dimen/margin_20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/change_password"
            android:layout_marginTop="@dimen/margin_20dp"
            android:src="@drawable/btn_selector"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
