<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/list_bg"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SettingActivities.SettingsFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >
        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="match_parent"
            android:text="@string/Setting"
            android:textSize="@dimen/txt_18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/search"
            android:layout_alignParentRight="true"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:id="@+id/btn_main_search"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">
        <LinearLayout
            android:id="@+id/ll_settings_logged_in_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_first"
                android:layout_width="wrap_content"
                android:background="@drawable/follow_ing"
                android:layout_gravity="center_horizontal"
                android:text="عدد"
                android:layout_height="wrap_content" />
            <com.socialinfotech.feeedj.AppUtils.TextViewPlus
                app:customFont="@string/Boldfont"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_20dp"
                android:gravity="right"
                android:text="اسم المستخدم"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:background="@drawable/et_background_white"
                android:hint="@string/usernmae_hint"
                android:gravity="right"
                android:padding="@dimen/margin_10dp"
                android:focusable="false"
                android:singleLine="true"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
            <com.socialinfotech.feeedj.AppUtils.TextViewPlus
                app:customFont="@string/Boldfont"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_20dp"
                android:gravity="right"
                android:text="البريد الإلكتروني"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_emailid_settings"
                android:layout_width="match_parent"
                android:background="@drawable/et_background_white"
                android:hint="@string/email_hint"
                android:gravity="right"
                android:padding="@dimen/margin_10dp"
                android:focusable="false"
                android:singleLine="true"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/btn_change_password"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/change_password"
                android:layout_marginTop="@dimen/margin_20dp"
                android:src="@drawable/btn_selector"
                android:layout_height="wrap_content" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/btn_contact"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/contact_us"
        android:layout_marginTop="@dimen/margin_20dp"
        android:src="@drawable/btn_selector"
        android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/btn_ads"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ads"
            android:layout_marginTop="@dimen/margin_20dp"
            android:src="@drawable/btn_selector"
            android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logout"
        android:layout_marginTop="@dimen/margin_20dp"
        android:src="@drawable/btn_selector"
        android:layout_height="wrap_content" />

        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            android:id="@+id/tv_settings_flag"
            app:customFont="@string/Boldfont"
            android:layout_width="wrap_content"
            android:text="@string/SettingSaudi"
            android:textColor="@color/dark_green"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"
            android:drawablePadding="@dimen/margin_10dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/saudi_flag"
            android:layout_height="wrap_content" />
        <com.socialinfotech.feeedj.AppUtils.TextViewPlus
            app:customFont="@string/Boldfont"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SettingVersion"
            android:textSize="@dimen/txt_12sp"
            android:textColor="@color/dark_grey"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:text="Developed by: Mohsin Falak"
            android:textSize="10dp"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
